--- a/styles.css
+++ b/styles.css
@@ -194,6 +194,7 @@ body {
     text-decoration:none;
     color:olive;
     font-weight:bold;
+    margin-left: 30px;
 }
 
 .cloud-body .devops-link a:hover {
